te-docker/src/main/resources/kubernetes/08_te_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: te-ingress
  namespace: taf-te
  annotations:
    ingress.kubernetes.io/rewrite-target: /jenkins
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /jenkins
        backend:
          serviceName: te-master
          servicePort: 80
